Added config for gh pages

--- a/index.html
+++ b/index.html
@@ -38,9 +38,11 @@
 </head>
 <body>
     <header>
+        <h1>Grilled Chicken!</h1>
     </header>
 
     <main>
+        
     </main>
 
     <footer>
