changed image sizes on all cards added css and changed homepage

--- a/html/beagle.html
+++ b/html/beagle.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Animal Trading Cards</tit le>
-	<link rel="shortcut icon" type="image/x-icon" href="images/ML-WEB.png">
+    <title>Doogie Match</title>
+	<link rel="shortcut icon" type="image/x-icon" href="logo-paws.png">
 	<link href="styles.css" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Muli:300i,400|Raleway" rel="stylesheet">
 </head>
@@ -15,7 +15,7 @@
 		</div>
 		<!-- your favorite animal's image goes here -->
 		<div class="picture">
-			<img src="https://cdn.pixabay.com/photo/2017/08/31/00/02/beagle-2699030_1280.jpg" alt="Rudy on couch">
+			<img src="Beagle2.jpg" class="card" classname="card" width="300px" height="205px" alt="Beagle">
 		</div>
 
 		<div id="info">
@@ -31,7 +31,7 @@
 				<li><span class="bold-text">Life span</span>: 12 – 15 years</li>
 			</ul>
 				<!-- your favorite animal's description goes here -->
-				<p>TNot only is the Beagle an excellent hunting dog and loyal companion, it is also happy-go-lucky, funny, and—thanks to its pleading expression—cute. They were bred to hunt in packs, so they enjoy company and are generally easygoing.</p>
+				<p>Not only is the Beagle an excellent hunting dog and loyal companion, it is also happy-go-lucky, funny, and—thanks to its pleading expression—cute. They were bred to hunt in packs, so they enjoy company and are generally easygoing.</p>
 		</div>
 		</div>
 	</div>
