--- a/html/card golden.html
+++ b/html/card golden.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Animal Trading Cards</title>
-	<link rel="shortcut icon" type="image/x-icon" href="images/ML-WEB.png">
+    <title>Doogie Match</title>
+	<link rel="shortcut icon" type="image/x-icon" href="logo-paws.png">
 	<link href="styles.css" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Muli:300i,400|Raleway" rel="stylesheet">
 </head>
@@ -15,7 +15,7 @@
 		</div>
 		<!-- your favorite animal's image goes here -->
 		<div class="picture">
-			<img src="https://cdn.pixabay.com/photo/2016/07/14/17/12/dog-1517145_1280.jpg" alt="Rudy on couch">
+			<img src="https://cdn.pixabay.com/photo/2016/07/14/17/12/dog-1517145_1280.jpg" class="card" classname="card" width="300px" height="205px" alt="Golden Retriever">
 		</div>
 
 		<div id="info">
