--- a/html/golden doodle.html
+++ b/html/golden doodle.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Animal Trading Cards</title>
-	<link rel="shortcut icon" type="image/x-icon" href="images/ML-WEB.png">
+    <title>Doogie Match</title>
+	<link rel="shortcut icon" type="image/x-icon" href="logo-paws.png">
 	<link href="styles.css" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Muli:300i,400|Raleway" rel="stylesheet">
 </head>
@@ -11,11 +11,11 @@
 	<div class="card">
 		<!-- your favorite animal's name goes here -->
 		<div class="name">
-			<h3>Maltese</h3>
+			<h3>Goldendoodle</h3>
 		</div>
 		<!-- your favorite animal's image goes here -->
 		<div class="picture">
-			<img src="https://cdn.pixabay.com/photo/2015/05/02/21/26/goldendoodle-750444_1280.jpg" alt="Rudy on couch">
+			<img src="https://cdn.pixabay.com/photo/2015/05/02/21/26/goldendoodle-750444_1280.jpg" class="card" classname="card" width="300px" height="205px" alt="Goldendoodle">
 		</div>
 
 		<div id="info">
