--- a/html/maltese.html
+++ b/html/maltese.html
@@ -2,10 +2,11 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Animal Trading Cards</title>
-	<link rel="shortcut icon" type="image/x-icon" href="images/ML-WEB.png">
+    <title>Doogie Match</title>
+	<link rel="shortcut icon" type="image/x-icon" href="logo-paws.png">
 	<link href="styles.css" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Muli:300i,400|Raleway" rel="stylesheet">
+	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
 	<div class="card">
@@ -15,7 +16,7 @@
 		</div>
 		<!-- your favorite animal's image goes here -->
 		<div class="picture">
-			<img src="https://cdn.pixabay.com/photo/2016/07/28/07/25/puppy-1547176_1280.jpg" alt="Rudy on couch">
+			<img src="https://cdn.pixabay.com/photo/2016/07/28/07/25/puppy-1547176_1280.jpg" class="card" classname="card" width="300px" height="205px" alt="Maltese">
 		</div>
 
 		<div id="info">
