updated css navbar jumbotrons

--- a/html/homepage.html
+++ b/html/homepage.html
@@ -31,35 +31,35 @@
 </head>
 <body class="container-full">
 <!-- header -->
-    <nav class="navbar justify-content-center navbar-dark bg-dark fixed-top">
+    <nav class="navbar justify-content-center navbar-light bg-light fixed-top">
             <a class="navbar-brand" href="#">
                     <img src="logo-paws.png" width="30" height="30" class="d-inline-block align-top" alt="">
             </a>
             <h4 class="justify-content-center">Doggie Match</h4>&nbsp;&nbsp;
             <form class="form-inline my-2 my-lg-0 justify-right">
-                <button class="btn btn-outline-alert my-2 my-sm-0" type="submit">Join</button>&nbsp;&nbsp;
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Sign-In</button>
+                    <button class="btn btn-outline-alert my-2 my-sm-0 bold-text" type="submit">Place</button>&nbsp;&nbsp;
+                    <button class="btn btn-outline-alert my-2 my-sm-0 bold-text" type="submit">Search</button>&nbsp;&nbsp;
+                <button class="btn btn-outline-alert my-2 my-sm-0 bold-text" type="submit">Join</button>&nbsp;&nbsp;
+                <button class="btn btn-outline-success my-2 my-sm-0 bold-text" type="submit">Sign-In</button>
             </form>
         </div>
     </nav>
     <div class="jumbotron container-home">
             <div class="container">
-              <!-- <h3 class="display-4">Doggie Match</h3>
-              <p class="lead">Tinder for finding pets</p> -->
               <div class="row">
                     <div class="col-6 col-sm-6">
-                            <div class="jumbotron jumbotron-fluid placeHome">
-                                <div class="container">
-                                    <h1 class="display-4">Placement</h1>
-                                    <p class="lead">Are looking for a new home?</p>
+                            <div class="jumbotron placeHome">
+                                <div class="container text-right">
+                                        <p class="text-center">Dogs looking for a new home?</p>
+                                        <button class="btn btn-outline-alert my-2 my-sm-0 " type="submit"><h1 class="text-center bold-text">Place</h1></button>
                                 </div>
                             </div>
                     </div>
                     <div class="col-6 col-sm-6">
                             <div class="jumbotron findDog">
-                                <div class="container">
-                                    <h1 class="display-4">Adoption</h1>
-                                    <p class="lead">Are you looking to adopt a dog?</p>
+                                <div class="container text-right">
+                                        <p class="text-center">Are you looking to adopt a dog?</p>
+                                        <button class="btn btn-outline-alert my-2 my-sm-0 " type="submit"><h1 class="text-center bold-text">Adopt</h1></button>
                                 </div>
                             </div>
                     </div>
