Seatch and petCard

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
     -->
     <title>Doogie Match</title>
   </head>
-  <body>
+  <body class="container-full">
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
